--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="first">
-            <h2>📞 Unlock Daily Free Nifty and Banknifty Calls! 🚀🔔</h2>
+            <h2>📞 Unlock Daily Free forex trading Calls! 🚀🔔</h2>
             <p class="ppp">🤝 Become a Part of Our Thriving Community of 5,000 + Traders! 💯</p>
             <p class="ppp" style="color: black;"><strong>100% Free:</strong> Absolutely No Hidden Fees or Charges—Only
                 Pure Value!</p>
